--- a/.github/renovate/grafanaDashboards.json5
+++ b/.github/renovate/grafanaDashboards.json5
@@ -10,14 +10,14 @@
       "matchDatasources": ["custom.grafana-dashboards"],
       "matchUpdateTypes": ["major"],
       "semanticCommitScope": "grafana-dashboards",
-      "semanticCommitType": "chore",
-    },
+      "semanticCommitType": "chore"
+    }
   ],
   "customDatasources": {
     "grafana-dashboards": {
       "defaultRegistryUrlTemplate": "https://grafana.com/api/dashboards/{{packageName}}",
       "format": "json",
-      "transformTemplates": ['{"releases":[{"version": $string(revision)}]}'],
+      "transformTemplates": ["{'releases':[{'version': $string(revision)}]}"]
     }
   },
   "customManagers": [
@@ -26,11 +26,11 @@
       "description": "Process Grafana dashboards",
       "managerFilePatterns": ["/(^|/)kubernetes/.+\\.ya?ml$/"],
       "matchStrings": [
-        'depName="(?<depName>.*)"\\n(?<indentation>\\s+)gnetId: (?<packageName>\\d+)\\n.+revision: (?<currentValue>\\d+)'
+        "depName='(?<depName>.*)'\\n(?<indentation>\\s+)gnetId: (?<packageName>\\d+)\\n.+revision: (?<currentValue>\\d+)"
       ],
-      "autoReplaceStringTemplate": 'depName="{{{depName}}}"\n{{{indentation}}}gnetId: {{{packageName}}}\n{{{indentation}}}revision: {{{newValue}}}',
+      "autoReplaceStringTemplate": "depName='{{{depName}}}'\n{{{indentation}}}gnetId: {{{packageName}}}\n{{{indentation}}}revision: {{{newValue}}}",
       "datasourceTemplate": "custom.grafana-dashboards",
       "versioningTemplate": "regex:^(?<major>\\d+)$"
-    },
-  ],
+    }
+  ]
 }
