--- a/kubernetes/apps/servarr/jellyfin/app/helmrelease.yaml
+++ b/kubernetes/apps/servarr/jellyfin/app/helmrelease.yaml
@@ -84,6 +84,7 @@ spec:
       app:
         hostnames:
           - "{{ .Release.Name }}.igloo.sh"
+          - watch.igloo.sh
         parentRefs:
           - name: external
             namespace: kube-system
