--- a/kubernetes/apps/kube-system/cilium/gateway/redirect.yaml
+++ b/kubernetes/apps/kube-system/cilium/gateway/redirect.yaml
@@ -7,6 +7,7 @@ metadata:
   annotations:
     external-dns.alpha.kubernetes.io/controller: none
 spec:
+  hostnames: ["*.igloo.sh"]  # Only apply to subdomains, not root domain
   parentRefs:
     - name: internal
       namespace: kube-system
