feat: handle root domain with second gateway listener

--- a/kubernetes/apps/default/flame/app/helm/values.yaml
+++ b/kubernetes/apps/default/flame/app/helm/values.yaml
@@ -34,7 +34,10 @@ route:
     parentRefs:
       - name: external
         namespace: kube-system
-        sectionName: https
+        sectionName: https       # for flame.igloo.sh
+      - name: external
+        namespace: kube-system
+        sectionName: root-https  # for igloo.sh
 service:
   app:
     ports:
