--- a/kubernetes/apps/kube-system/cilium/gateway/external.yaml
+++ b/kubernetes/apps/kube-system/cilium/gateway/external.yaml
@@ -33,3 +33,22 @@ spec:
         certificateRefs:
           - kind: Secret
             name: igloo-sh-production-tls
+    # listeners to handle root domain
+    - name: root-http
+      protocol: HTTP
+      port: 80
+      hostname: "igloo.sh"
+      allowedRoutes:
+        namespaces:
+          from: Same
+    - name: root-https
+      protocol: HTTPS
+      port: 443
+      hostname: "igloo.sh"
+      allowedRoutes:
+        namespaces:
+          from: All
+      tls:
+        certificateRefs:
+          - kind: Secret
+            name: igloo-sh-production-tls
