config: add asus-node-01 drive to ceph-cluster

--- a/kubernetes/apps/rook-ceph/rook-ceph/cluster/helmrelease.yaml
+++ b/kubernetes/apps/rook-ceph/rook-ceph/cluster/helmrelease.yaml
@@ -83,6 +83,9 @@ spec:
         useAllNodes: false
         useAllDevices: false
         nodes:
+          - name: asus-node-01
+            devices:
+              - name: nvme0n1
           - name: dell-node-01
             devices:
               - name: sda
