config: bump cephBlockPools replicas

--- a/kubernetes/apps/rook-ceph/rook-ceph/cluster/helmrelease.yaml
+++ b/kubernetes/apps/rook-ceph/rook-ceph/cluster/helmrelease.yaml
@@ -100,7 +100,7 @@ spec:
         spec:
           failureDomain: host
           replicated:
-            size: 1  # TODO: set to 3, when more disks added
+            size: 3
         storageClass:
           enabled: true
           name: ceph-block
