config: enable eGPU device

--- a/talos/patches/global/machine-udev.yaml
+++ b/talos/patches/global/machine-udev.yaml
@@ -10,3 +10,5 @@ machine:
       - ACTION=="add", ENV{ID_TYPE}=="disk", ENV{ID_BUS}=="usb", ENV{ID_BUS}="scsi"
       - ACTION=="change", ENV{ID_TYPE}=="disk", ENV{ID_BUS}=="usb", ENV{ID_BUS}="scsi"
       - ACTION=="online", ENV{ID_TYPE}=="disk", ENV{ID_BUS}=="usb", ENV{ID_BUS}="scsi"
+      # Auto-authorize Thunderbolt devices for eGPU support
+      - ACTION=="add", SUBSYSTEM=="thunderbolt", ATTR{authorized}=="0", ATTR{authorized}="1"
