--- a/kubernetes/apps/kube-system/amd-device-plugin/app/labeller/helmrelease.yaml
+++ b/kubernetes/apps/kube-system/amd-device-plugin/app/labeller/helmrelease.yaml
@@ -3,7 +3,7 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: &app amd-gpu-node-labeller
+  name: amd-gpu-node-labeller
 spec:
   interval: 1h
   chartRef:
