--- a/kubernetes/apps/kube-system/amd-device-plugin/app/plugin/helmrelease.yaml
+++ b/kubernetes/apps/kube-system/amd-device-plugin/app/plugin/helmrelease.yaml
@@ -3,7 +3,7 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: &app amd-device-plugin
+  name: amd-device-plugin
 spec:
   interval: 1h
   chartRef:
