--- a/kubernetes/apps/kube-system/amd-device-plugin/app/labeller/helmrelease.yaml
+++ b/kubernetes/apps/kube-system/amd-device-plugin/app/labeller/helmrelease.yaml
@@ -59,12 +59,9 @@ spec:
         - key: CriticalAddonsOnly
           operator: Exists
       nodeSelector:
-        feature.node.kubernetes.io/pci-0380_1002.present: "true"
         kubernetes.io/arch: amd64
+        kubernetes.io/hostname: asus-node-01
       priorityClassName: system-node-critical
-    serviceAccount:
-      create: false
-      name: amd-gpu-node-labeller
     service:
       app:
         enabled: false
