--- a/kubernetes/apps/kube-system/amd-device-plugin/app/plugin/helmrelease.yaml
+++ b/kubernetes/apps/kube-system/amd-device-plugin/app/plugin/helmrelease.yaml
@@ -47,8 +47,8 @@ spec:
         - key: CriticalAddonsOnly
           operator: Exists
       nodeSelector:
-        feature.node.kubernetes.io/pci-0380_1002.present: "true"
         kubernetes.io/arch: amd64
+        kubernetes.io/hostname: asus-node-01
       priorityClassName: system-node-critical
     service:
       app:
