--- a/kubernetes/apps/servarr/cross-seed/app/externalsecret.yaml
+++ b/kubernetes/apps/servarr/cross-seed/app/externalsecret.yaml
@@ -47,6 +47,8 @@ spec:
     - extract:
         key: cross-seed
     - extract:
+        key: prowlarr
+    - extract:
         key: radarr
     - extract:
         key: sonarr
