fix: cross-seed migration outputDir

--- a/kubernetes/apps/servarr/cross-seed/app/externalsecret.yaml
+++ b/kubernetes/apps/servarr/cross-seed/app/externalsecret.yaml
@@ -26,11 +26,10 @@ spec:
             action: "inject",
             apiKey: "{{.CROSS_SEED_API_KEY}}",
             linkCategory: "cross-seed",
-            linkDirs: [
-              "/data/nas-media/Downloads/qbittorrent/complete/cross-seed"
-            ],
+            linkDirs: ["/data/nas-media/Downloads/qbittorrent/complete/cross-seed"],
             linkType: "hardlink",
             matchMode: "partial",
+            outputDir: null,
             port: Number(process.env.CROSS_SEED_PORT),
             radarr: [
               "http://radarr.servarr.svc.cluster.local:7878/?apikey={{ .RADARR_API_KEY }}",
