--- a/talos/talconfig.yaml
+++ b/talos/talconfig.yaml
@@ -135,6 +135,8 @@ nodes:
           - network: "0.0.0.0/0"
             gateway: "192.168.20.1"
         mtu: 1500
+    nodeLabels:
+      amd.feature.node.kubernetes.io/gpu: "true"
     extensionServices:
       - name: tailscale
         environment:
