--- a/kubernetes/apps/kube-system/amd-device-plugin/app/labeller/rbac.yaml
+++ b/kubernetes/apps/kube-system/amd-device-plugin/app/labeller/rbac.yaml
@@ -23,7 +23,7 @@ metadata:
 rules:
   - apiGroups: [""]
     resources: ["nodes"]
-    verbs: ["watch", "get", "list", "update"]
+    verbs: ["watch", "get", "list", "patch", "update"]
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
