--- a/kubernetes/apps/kube-system/amd-device-plugin/app/labeller/helmrelease.yaml
+++ b/kubernetes/apps/kube-system/amd-device-plugin/app/labeller/helmrelease.yaml
@@ -3,7 +3,7 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: amd-gpu-node-labeller
+  name: &app amd-gpu-node-labeller
 spec:
   interval: 1h
   chartRef:
@@ -22,6 +22,8 @@ spec:
   values:
     controllers:
       amd-gpu-node-labeller:
+        serviceAccount:
+          name: *app
         type: daemonset
         containers:
           app:
@@ -66,6 +68,9 @@ spec:
       app:
         enabled: false
         controller: amd-gpu-node-labeller
+    serviceAccount:
+      amd-gpu-node-labeller:
+        enabled: true
     persistence:
       sys:
         enabled: true
