--- a/kubernetes/apps/default/kustomization.yaml
+++ b/kubernetes/apps/default/kustomization.yaml
@@ -10,4 +10,5 @@ resources:
   - ./flame/ks.yaml
   - ./home-assistant/ks.yaml
   - ./readeck/ks.yaml
+  - ./thelounge/ks.yaml
   - ./webhook/ks.yaml
