--- a/kubernetes/apps/servarr/tqm/app/helmrelease.yaml
+++ b/kubernetes/apps/servarr/tqm/app/helmrelease.yaml
@@ -3,7 +3,7 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: qbtools
+  name: tqm
 spec:
   interval: 1h
   chartRef:
@@ -18,10 +18,10 @@ spec:
       retries: 3
   values:
     controllers:
-      tagging:
+      tqm:
         type: cronjob
         cronjob: &cronJobSpec
-          schedule: 0 * * * *
+          schedule: "@hourly"
           backoffLimit: 0
           concurrencyPolicy: Forbid
           successfulJobsHistory: 1
@@ -30,144 +30,61 @@ spec:
         initContainers:
           tag: &container
             image:
-              repository: ghcr.io/buroa/qbtools
-              tag: v0.21.1@sha256:fd13085f7534719b7b30828684661b7f5611bbc4156831123775cfcd9b8f2eb5
-            env:
-              QBITTORRENT_HOST: &qbittorrent_host qbittorrent.servarr.svc.cluster.local
-              QBITTORRENT_PORT: &qbittorrent_port "8080"
-              SABNZBD_HOST: sabnzbd.servarr.svc.cluster.local
-              SABNZBD_PORT: 8080
-            envFrom:
-              - secretRef:
-                  name: qbtools-secret
+              repository: ghcr.io/home-operations/tqm
+              tag: 1.15.0@sha256:70545e1a52e5afc4a6474c5b492e127be7b776eb9cea7adea3c6399e67ae2287
             args:
-              - tagging
-              - --added-on
-              - --expired
-              - --last-activity
-              - --sites
-              - --unregistered
-              - --not-linked
-              - --server
-              - *qbittorrent_host
-              - --port
-              - *qbittorrent_port
-              - --config
-              - /config/config.yaml
+              - retag
+              - qb
             securityContext:
               allowPrivilegeEscalation: false
               readOnlyRootFilesystem: true
               capabilities: { drop: ["ALL"] }
             resources:
               requests:
-                memory: 128Mi
-                cpu: 25m
+                cpu: 10m
+                memory: 64Mi
               limits:
-                memory: 256M
+                memory: 64Mi
         containers:
-          expired:
+          clean:
             <<: *container
             args:
-              - prune
-              - --exclude-category
-              - manual
-              - --exclude-category
-              - cross-seed
-              - --exclude-category
-              - music
-              - --exclude-tag
-              - added:1d
-              - --include-tag
-              - expired
-              - --with-data
-              - --server
-              - *qbittorrent_host
-              - --port
-              - *qbittorrent_port
-          unregistered:
-            <<: *container
-            args:
-              - prune
-              - --exclude-category
-              - manual
-              - --exclude-category
-              - cross-seed
-              - --exclude-category
-              - music
-              - --exclude-tag
-              - added:1d
-              - --include-tag
-              - unregistered
-              - --with-data
-              - --server
-              - *qbittorrent_host
-              - --port
-              - *qbittorrent_port
+              - clean
+              - qb
         pod:
           restartPolicy: Never
       orphaned:
         type: cronjob
         cronjob:
           <<: *cronJobSpec
-          schedule: "@daily"
+          schedule: 0 0 * * 0
           suspend: true
         containers:
           app:
             <<: *container
             args:
-              - orphaned
-              - --exclude-pattern
-              - "*/manual/*"
-              - --exclude-pattern
-              - "*/cross-seed/*"
-              - --exclude-pattern
-              - "*_unpackerred*"
-              - --server
-              - *qbittorrent_host
-              - --port
-              - *qbittorrent_port
+              - orphan
+              - qb
+              - --dry-run
         pod:
           restartPolicy: Never
-      reannounce:
-        containers:
-          app:
-            <<: *container
-            args:
-              - reannounce
-              - --process-seeding
-              - --server
-              - *qbittorrent_host
-              - --port
-              - *qbittorrent_port
-      limiter:
-        containers:
-          app:
-            <<: *container
-            args:
-              - limiter
-              - --max-line-speed-mbps
-              - "100"
-              - --max-percent
-              - "0.8"
-              - --limit-percent
-              - "0.4"
-              - --interval
-              - "5"
-              - --server
-              - *qbittorrent_host
-              - --port
-              - *qbittorrent_port
     defaultPodOptions:
       securityContext:
         runAsNonRoot: true
         runAsUser: 1000
         runAsGroup: 1000
+        fsGroup: 1000
+        fsGroupChangePolicy: OnRootMismatch
     persistence:
+      config:
+        type: emptyDir
+        globalMounts:
+          - path: /.config/tqm
       secret-file:
         type: secret
-        name: qbtools-config-secret
+        name: tqm-secret
         globalMounts:
-          - path: /config/config.yaml
+          - path: /.config/tqm/config.yaml
             subPath: config.yaml
             readOnly: true
       media:
