--- a/kubernetes/apps/servarr/autobrr/app/helmrelease.yaml
+++ b/kubernetes/apps/servarr/autobrr/app/helmrelease.yaml
@@ -37,28 +37,28 @@ spec:
             envFrom:
               - secretRef:
                   name: autobrr-secret
-            probes:
-              liveness: &probes
-                enabled: true
-                custom: true
-                spec:
-                  httpGet:
-                    path: /api/healthz/liveness
-                    port: *port
-                  initialDelaySeconds: 45
-                  periodSeconds: 10
-                  timeoutSeconds: 1
-                  failureThreshold: 3
-              readiness: *probes
+            # probes:
+            #   liveness: &probes
+            #     enabled: true
+            #     custom: true
+            #     spec:
+            #       httpGet:
+            #         path: /api/healthz/liveness
+            #         port: *port
+            #       initialDelaySeconds: 45
+            #       periodSeconds: 10
+            #       timeoutSeconds: 1
+            #       failureThreshold: 3
+            #   readiness: *probes
             securityContext:
               allowPrivilegeEscalation: false
               readOnlyRootFilesystem: true
               capabilities: { drop: ["ALL"] }
             resources:
               requests:
-                cpu: 10m
+                cpu: 100m
               limits:
-                memory: 256Mi
+                memory: 512Mi
     defaultPodOptions:
       securityContext:
         runAsNonRoot: true
