--- a/kubernetes/apps/observability/loki/app/helm/values.yaml
+++ b/kubernetes/apps/observability/loki/app/helm/values.yaml
@@ -4,8 +4,6 @@ loki:
   auth_enabled: false
   analytics:
     reporting_enabled: false
-  server:
-    log_level: info
   commonConfig:
     replication_factor: 1
   compactor:
@@ -16,6 +14,10 @@ loki:
     chunk_encoding: snappy
   limits_config:
     retention_period: 14d
+  server:
+    grpc_server_max_recv_msg_size: 10485760 # 10 MiB
+    grpc_server_max_send_msg_size: 10485760 # 10 MiB
+    log_level: info
   storage:
     type: filesystem
   schemaConfig:
