--- a/kubernetes/apps/kube-system/cilium/app/kustomization.yaml
+++ b/kubernetes/apps/kube-system/cilium/app/kustomization.yaml
@@ -3,8 +3,8 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
+  - ./ocirepository.yaml
   - ./helmrelease.yaml
-  - ./helmrepository.yaml
   - ./networks.yaml
 configMapGenerator:
   - name: cilium-values
