--- a/bootstrap/helmfile.yaml
+++ b/bootstrap/helmfile.yaml
@@ -6,14 +6,10 @@ helmDefaults:
   wait: true
   waitForJobs: true
 
-repositories:
-  - name: cilium
-    url: https://helm.cilium.io
-
 releases:
   - name: cilium
     namespace: kube-system
-    chart: cilium/cilium
+    chart: oci://ghcr.io/home-operations/charts-mirror/cilium
     version: 1.18.0
     values: ['../kubernetes/apps/kube-system/cilium/app/helm/values.yaml']
 
