--- a/kubernetes/apps/observability/grafana/app/helm/values.yaml
+++ b/kubernetes/apps/observability/grafana/app/helm/values.yaml
@@ -9,6 +9,11 @@ env:
   GF_PLUGINS_ALLOW_LOADING_UNSIGNED_PLUGINS: natel-discrete-panel,pr0ps-trackmap-panel,panodata-map-panel
   GF_SECURITY_ANGULAR_SUPPORT_ENABLED: true
   GF_SERVER_ROOT_URL: https://grafana.igloo.sh
+  JELLYFIN_API_TOKEN:
+    valueFrom:
+      secretKeyRef:
+        name: grafana-admin
+        key: jellyfin-api-key
 grafana.ini:
   analytics:
     check_for_updates: false
@@ -28,6 +33,7 @@ datasources:
       - { name: Alertmanager, orgId: 1 }
       - { name: Loki, orgId: 1 }
       - { name: Prometheus, orgId: 1 }
+      - { name: Jellyfin, orgId: 1 }
     datasources:
       - name: Prometheus
         type: prometheus
@@ -49,6 +55,16 @@ datasources:
         url: http://alertmanager-operated.observability.svc.cluster.local:9093
         jsonData:
           implementation: prometheus
+      - name: Jellyfin
+        type: marcusolsson-json-datasource
+        uid: jellyfin
+        access: proxy
+        url: http://jellyfin.servarr.svc.cluster.local:8096
+        jsonData:
+          httpMethod: GET
+          timeout: 30
+        secureJsonData:
+          apiKey: ${JELLYFIN_API_TOKEN}
 dashboardProviders:
   dashboardproviders.yaml:
     apiVersion: 1
@@ -94,6 +110,10 @@ dashboards:
       gnetId: 15038
       revision: 3
       datasource: Prometheus
+    jellyfin-sessions:
+      # renovate: depName="Jellyfin"
+      url: https://gist.githubusercontent.com/dfsnow/aad4ec99afb413968c49efb03bdb1ab9/raw/33b8d1652bdecf72ca6b9fc24fe14a41717816cd/state-timeline-grafana-panel.json
+      datasource: Jellyfin
     kubernetes-api-server:
       # renovate: depName="Kubernetes / System / API Server"
       gnetId: 15761
@@ -200,6 +220,7 @@ plugins:
   - grafana-clock-panel
   - grafana-piechart-panel
   - grafana-worldmap-panel
+  - marcusolsson-json-datasource
   - natel-discrete-panel
   - pr0ps-trackmap-panel
   - vonage-status-panel
