--- a/kubernetes/apps/observability/grafana/app/helm/values.yaml
+++ b/kubernetes/apps/observability/grafana/app/helm/values.yaml
@@ -12,7 +12,7 @@ env:
   JELLYFIN_API_TOKEN:
     valueFrom:
       secretKeyRef:
-        name: grafana-admin
+        name: grafana-admin-secret
         key: jellyfin-api-key
 grafana.ini:
   analytics:
