try chart secret ref
- https://github.com/grafana/helm-charts/blob/c01e401c8867d5de98619ec1173405d6c4d41980/charts/grafana/values.yaml#L554

--- a/kubernetes/apps/observability/grafana/app/externalsecret.yaml
+++ b/kubernetes/apps/observability/grafana/app/externalsecret.yaml
@@ -15,6 +15,7 @@ spec:
         admin-user: "{{ .GRAFANA_ADMIN_USERNAME }}"
         admin-password: "{{ .GRAFANA_ADMIN_PASSWORD }}"
         jellyfin-api-key: "{{ JELLYFIN_API_KEY }}"
+        JELLYFIN_API_KEY: "{{ JELLYFIN_API_KEY }}"
   dataFrom:
     - extract:
         key: grafana
