--- a/kubernetes/apps/observability/grafana/app/helm/values.yaml
+++ b/kubernetes/apps/observability/grafana/app/helm/values.yaml
@@ -9,11 +9,7 @@ env:
   GF_PLUGINS_ALLOW_LOADING_UNSIGNED_PLUGINS: natel-discrete-panel,pr0ps-trackmap-panel,panodata-map-panel
   GF_SECURITY_ANGULAR_SUPPORT_ENABLED: true
   GF_SERVER_ROOT_URL: https://grafana.igloo.sh
-  JELLYFIN_API_TOKEN:
-    valueFrom:
-      secretKeyRef:
-        name: grafana-admin-secret
-        key: jellyfin-api-key
+envFromSecret: "grafana-admin-secret"
 grafana.ini:
   analytics:
     check_for_updates: false
