config(unpackerr): update scrape targets

--- a/kubernetes/apps/servarr/unpackerr/app/scrapeconfig.yaml
+++ b/kubernetes/apps/servarr/unpackerr/app/scrapeconfig.yaml
@@ -10,3 +10,5 @@ spec:
   staticConfigs:
     - targets:
         - unpackerr.servarr.svc.cluster.local:5656
+        - radarr.servarr.svc.cluster.local:7878
+        - sonarr.servarr.svc.cluster.local:8989
