--- a/kubernetes/apps/observability/grafana/app/helm/values.yaml
+++ b/kubernetes/apps/observability/grafana/app/helm/values.yaml
@@ -9,7 +9,11 @@ env:
   GF_PLUGINS_ALLOW_LOADING_UNSIGNED_PLUGINS: natel-discrete-panel,pr0ps-trackmap-panel,panodata-map-panel
   GF_SECURITY_ANGULAR_SUPPORT_ENABLED: true
   GF_SERVER_ROOT_URL: https://grafana.igloo.sh
-envFromSecret: "grafana-admin-secret"
+envValueFrom:
+  JELLYFIN_API_KEY:
+    secretKeyRef:
+      name: grafana-admin-secret
+      key: jellyfin-api-key
 grafana.ini:
   analytics:
     check_for_updates: false
