fix: secret reference

--- a/kubernetes/apps/observability/grafana/app/externalsecret.yaml
+++ b/kubernetes/apps/observability/grafana/app/externalsecret.yaml
@@ -14,7 +14,7 @@ spec:
       data:
         admin-user: "{{ .GRAFANA_ADMIN_USERNAME }}"
         admin-password: "{{ .GRAFANA_ADMIN_PASSWORD }}"
-        jellyfin-api-key: "{{ JELLYFIN_API_KEY }}"
+        jellyfin-api-key: "{{ .JELLYFIN_API_KEY }}"
   dataFrom:
     - extract:
         key: grafana
