fix: grafana jsonData headers

--- a/kubernetes/apps/observability/grafana/app/helm/values.yaml
+++ b/kubernetes/apps/observability/grafana/app/helm/values.yaml
@@ -63,7 +63,9 @@ datasources:
         jsonData:
           httpMethod: GET
           timeout: 30
+          httpHeaderName1: Authorization
         secureJsonData:
+          httpHeaderValue1: MediaBrowser Token=${JELLYFIN_API_KEY}
           apiKey: ${JELLYFIN_API_KEY}
 dashboardProviders:
   dashboardproviders.yaml:
