--- a/kubernetes/apps/observability/grafana/app/externalsecret.yaml
+++ b/kubernetes/apps/observability/grafana/app/externalsecret.yaml
@@ -15,6 +15,7 @@ spec:
         admin-user: "{{ .GRAFANA_ADMIN_USERNAME }}"
         admin-password: "{{ .GRAFANA_ADMIN_PASSWORD }}"
         jellyfin-api-key: "{{ .JELLYFIN_API_KEY }}"
+        jellyfin-auth-header: "MediaBrowser Token={{ .JELLYFIN_API_KEY }}"
   dataFrom:
     - extract:
         key: grafana
