feat: introduce jellyfin-json-exporter over API export  (#570)
* cleanup grafana dashboard configs

* feat: introduce jellyfin-json-exporter

just going to use prom for better timeseries scrape

* config(unpackerr): remove unused scapeConfig

* feat: remove jellyfin grafa datasource

- using prometheus json exporter instead for better timeseries support
- keeping `yesoreyeram-infinity-datasource` plugin; it has been useful

* change image reference

--- a/kubernetes/apps/observability/jellyfin-json-exporter/app/externalsecret.yaml
+++ b/kubernetes/apps/observability/jellyfin-json-exporter/app/externalsecret.yaml
@@ -3,17 +3,16 @@
 apiVersion: external-secrets.io/v1
 kind: ExternalSecret
 metadata:
-  name: grafana-admin
+  name: jellyfin-json-exporter
 spec:
   secretStoreRef:
     kind: ClusterSecretStore
     name: onepassword
   target:
-    name: grafana-admin-secret
+    name: jellyfin-json-exporter-secret
     template:
       data:
-        admin-user: "{{ .GRAFANA_ADMIN_USERNAME }}"
-        admin-password: "{{ .GRAFANA_ADMIN_PASSWORD }}"
+        JELLYFIN_API_KEY: "{{ .JELLYFIN_API_KEY }}"
   dataFrom:
     - extract:
-        key: grafana
+        key: jellyfin
