--- a/kubernetes/apps/observability/jellyfin-json-exporter/app/kustomization.yaml
+++ b/kubernetes/apps/observability/jellyfin-json-exporter/app/kustomization.yaml
@@ -6,3 +6,7 @@ resources:
   - ./externalsecret.yaml
   - ./helmrelease.yaml
   - ./scrapeconfig.yaml
+configMapGenerator:
+  - name: jellyfin-json-exporter-config
+    files:
+      - jje.yaml=./resources/config.yaml
