fix: configmap generator disableNameSuffixHash

--- a/kubernetes/apps/observability/jellyfin-json-exporter/app/kustomization.yaml
+++ b/kubernetes/apps/observability/jellyfin-json-exporter/app/kustomization.yaml
@@ -10,3 +10,5 @@ configMapGenerator:
   - name: jellyfin-json-exporter-config
     files:
       - jje.yaml=./resources/config.yaml
+generatorOptions:
+  disableNameSuffixHash: true
