--- a/kubernetes/apps/servarr/jellyfin/app/helmrelease.yaml
+++ b/kubernetes/apps/servarr/jellyfin/app/helmrelease.yaml
@@ -71,7 +71,7 @@ spec:
         runAsGroup: 1000
         fsGroup: 1000
         fsGroupChangePolicy: OnRootMismatch
-        supplementalGroups: [44, 109]
+        supplementalGroups: [44, 109]  # TODO: remove when talos nodes updated to 1.10.6
     service:
       app:
         type: LoadBalancer
