--- a/kubernetes/apps/kube-system/cilium/gateway/redirect.yaml
+++ b/kubernetes/apps/kube-system/cilium/gateway/redirect.yaml
@@ -14,6 +14,9 @@ spec:
     - name: external
       namespace: kube-system
       sectionName: http
+    - name: external
+      namespace: kube-system
+      sectionName: root-http
   rules:
     - filters:
         - requestRedirect:
