--- a/.mise.toml
+++ b/.mise.toml
@@ -1,3 +1,4 @@
+# yaml-language-server: $schema=https://mise.jdx.dev/schema/mise.json
 [env]
 _.python.venv = { path = "{{config_root}}/.venv", create = true }
 BOOTSTRAP_DIR = "{{config_root}}/bootstrap"
