--- a/kubernetes/apps/observability/kube-prometheus-stack/app/externalsecret.yaml
+++ b/kubernetes/apps/observability/kube-prometheus-stack/app/externalsecret.yaml
@@ -15,8 +15,11 @@ spec:
       data:
         ALERTMANAGER_PUSHOVER_TOKEN: "{{ .ALERTMANAGER_PUSHOVER_TOKEN }}"
         PUSHOVER_USER_KEY: "{{ .PUSHOVER_USER_KEY }}"
+        GATUS_WATCHDOG_HEARTBEAT_TOKEN: "{{ .GATUS_WATCHDOG_HEARTBEAT_TOKEN }}"
   dataFrom:
     - extract:
         key: pushover
     - extract:
         key: alertmanager
+    - extract:
+        key: gatus
