--- a/kubernetes/apps/observability/gatus/app/externalsecret.yaml
+++ b/kubernetes/apps/observability/gatus/app/externalsecret.yaml
@@ -14,6 +14,7 @@ spec:
       data:
         PUSHOVER_TOKEN: "{{ .GATUS_PUSHOVER_TOKEN }}"
         PUSHOVER_USER_KEY: "{{ .PUSHOVER_USER_KEY }}"
+        WATCHDOG_HEARTBEAT_TOKEN: "{{ .GATUS_WATCHDOG_HEARTBEAT_TOKEN }}"
   dataFrom:
     - extract:
         key: gatus
