feat: add gatus heartbeat (#611)
* feat: add gatus heartbeat

- https://github.com/TwiN/gatus/blob/master/README.md#external-endpoints

* config: update alertmanager-watchdog gatus group

--- a/kubernetes/apps/observability/gatus/app/resources/config.yaml
+++ b/kubernetes/apps/observability/gatus/app/resources/config.yaml
@@ -37,3 +37,14 @@ endpoints:
       - "[STATUS] == 404"
     alerts:
       - type: pushover
+external-endpoints:
+  - name: alertmanager-watchdog
+    group: external
+    token: ${WATCHDOG_HEARTBEAT_TOKEN}
+    heartbeat:
+      interval: 30m
+    alerts:
+      - type: pushover
+        description: "AlertManager watchdog heartbeat failed - alerting pipeline may be down"
+        failure-threshold: 1
+        success-threshold: 1
