--- a/kubernetes/apps/observability/kube-prometheus-stack/app/alertmanagerconfig.yaml
+++ b/kubernetes/apps/observability/kube-prometheus-stack/app/alertmanagerconfig.yaml
@@ -41,7 +41,7 @@ spec:
     - name: "null"
     - name: gatus-watchdog-heartbeat
       webhookConfigs:
-        - url: http://gatus.observability.svc.cluster.local/api/v1/endpoints/alertmanager-watchdog/external
+        - url: http://gatus.observability.svc.cluster.local/api/v1/endpoints/alertmanager-watchdog/external?success=true
           httpConfig:
             authorization:
               type: Bearer
