--- a/kubernetes/apps/observability/kube-prometheus-stack/app/alertmanagerconfig.yaml
+++ b/kubernetes/apps/observability/kube-prometheus-stack/app/alertmanagerconfig.yaml
@@ -22,6 +22,7 @@ spec:
           - name: alertname
             value: Watchdog
             matchType: =
+            continue: false
       - receiver: pushover
         matchers:
           - name: severity
@@ -41,7 +42,7 @@ spec:
     - name: "null"
     - name: gatus-watchdog-heartbeat
       webhookConfigs:
-        - url: http://gatus.observability.svc.cluster.local/api/v1/endpoints/alertmanager-watchdog/external?success=true
+        - url: http://gatus.observability.svc.cluster.local/api/v1/endpoints/external-alertmanager-watchdog/external?success=true
           httpConfig:
             authorization:
               type: Bearer
