chore: renovate config updates (#664)
* chore: qbrr is a ro mount

* update renovate config

* chore: add renovate overrides

--- a/.github/renovate/groups.json5
+++ b/.github/renovate/groups.json5
@@ -48,7 +48,7 @@
     },
     {
       "description": ["Flux Operator Group"],
-      "groupName": "Flux Operator",
+      "groupName": "flux-operator",
       "matchDatasources": ["docker"],
       "matchPackagePatterns": ["flux-operator", "flux-instance"],
       "group": {
@@ -72,6 +72,6 @@
       "group": {
         "commitMessageTopic": "{{{groupName}}} group"
       }
-    }
+    },
   ]
 }
