--- a/kubernetes/apps/servarr/autobrr/app/helmrelease.yaml
+++ b/kubernetes/apps/servarr/autobrr/app/helmrelease.yaml
@@ -37,19 +37,19 @@ spec:
             envFrom:
               - secretRef:
                   name: autobrr-secret
-            probes:
-              liveness: &probes
-                enabled: true
-                custom: true
-                spec:
-                  httpGet:
-                    path: /api/healthz/liveness
-                    port: *port
-                  initialDelaySeconds: 45
-                  periodSeconds: 10
-                  timeoutSeconds: 1
-                  failureThreshold: 3
-              readiness: *probes
+            # probes:
+            #   liveness: &probes
+            #     enabled: true
+            #     custom: true
+            #     spec:
+            #       httpGet:
+            #         path: /api/healthz/liveness
+            #         port: *port
+            #       initialDelaySeconds: 45
+            #       periodSeconds: 10
+            #       timeoutSeconds: 1
+            #       failureThreshold: 3
+            #   readiness: *probes
             securityContext:
               allowPrivilegeEscalation: false
               readOnlyRootFilesystem: true
