--- a/.github/renovate/groups.json5
+++ b/.github/renovate/groups.json5
@@ -38,6 +38,15 @@
       }
     },
     {
+      "description": "External DNS Group",
+      "groupName": "External DNS",
+      "matchDatasources": ["docker"],
+      "matchPackageNames": ["/external-dns/"],
+      "group": {
+        "commitMessageTopic": "{{{groupName}}} group",
+      },
+    },
+    {
       "description": "External Secrets Operator Group",
       "groupName": "External Secrets Operator",
       "matchDatasources": ["docker"],
