--- a/kubernetes/apps/default/kustomization.yaml
+++ b/kubernetes/apps/default/kustomization.yaml
@@ -9,6 +9,7 @@ resources:
   - ./echo-server/ks.yaml
   - ./flame/ks.yaml
   - ./home-assistant/ks.yaml
+  - ./manyfold/ks.yaml
   - ./n8n/ks.yaml
   - ./readeck/ks.yaml
   - ./thelounge/ks.yaml
