--- a/kubernetes/apps/default/manyfold/app/helmrelease.yaml
+++ b/kubernetes/apps/default/manyfold/app/helmrelease.yaml
@@ -66,7 +66,7 @@ spec:
                 cpu: 20m
                 memory: 128Mi
               limits:
-                memory: 2Gi
+                memory: 1536Mi
             securityContext:
               allowPrivilegeEscalation: false
               readOnlyRootFilesystem: true
