--- a/kubernetes/apps/default/manyfold/app/externalsecret.yaml
+++ b/kubernetes/apps/default/manyfold/app/externalsecret.yaml
@@ -12,8 +12,7 @@ spec:
     name: manyfold-secret
     template:
       data:
-        MANYFOLD_SECRET_KEY: "{{ .manyfold_config_secret_key }}"
-        SECRET_KEY_BASE: "{{ .MANYFOLD_SECRET_KEY }}"
+        SECRET_KEY_BASE: "{{ .MANYFOLD_SECRET_KEY_BASE }}"
   dataFrom:
     - extract:
         key: manyfold
