--- a/kubernetes/apps/default/manyfold/app/helmrelease.yaml
+++ b/kubernetes/apps/default/manyfold/app/helmrelease.yaml
@@ -21,6 +21,12 @@ spec:
       manyfold:
         annotations:
           secret.reloader.stakater.com/reload: manyfold-secret
+        pod:
+          securityContext:
+            runAsUser: 2000
+            runAsGroup: 2000
+            fsGroup: 2000
+            fsGroupChangePolicy: "OnRootMismatch"
         initContainers:
           chown-tmpdirs:
             image:
@@ -95,13 +101,6 @@ spec:
               allowPrivilegeEscalation: false
               readOnlyRootFilesystem: true
               capabilities: { drop: ["ALL"] }
-    defaultPodOptions:
-      securityContext:
-        runAsNonRoot: true
-        runAsUser: 1000
-        runAsGroup: 1000
-        fsGroup: 1000
-        fsGroupChangePolicy: OnRootMismatch
     service:
       app:
         forceRename: manyfold
@@ -126,7 +125,6 @@ spec:
           - backendRefs:
             - identifier: app
               port: *httpPort
-
     persistence:
       data:
         existingClaim: manyfold
@@ -149,5 +147,3 @@ spec:
               - path: /app/log
                 subPath: app-log
             chown-tmpdirs: *tmpdirs
-        globalMounts:
-          - path: /home/node/.cache
