--- a/kubernetes/apps/default/manyfold/app/helmrelease.yaml
+++ b/kubernetes/apps/default/manyfold/app/helmrelease.yaml
@@ -47,7 +47,7 @@ spec:
               tag: 0.124.0@sha256:a9b9daccab2868f6d1de4b4e43384d0c26f3be361fb61854223326b2be6b620d
             env:
               DATABASE_URL: sqlite3:/data/database/manyfold.sqlite3
-              MULTIUSER: true
+              MULTIUSER: enabled
               PORT: &httpPort 3214
               REDIS_URL: redis://manyfold-redis.default.svc.cluster.local:6379
             envFrom:
