config(manyfold): enable external route

--- a/kubernetes/apps/default/manyfold/app/helmrelease.yaml
+++ b/kubernetes/apps/default/manyfold/app/helmrelease.yaml
@@ -118,7 +118,7 @@ spec:
       app:
         hostnames: ["{{ .Release.Name }}.igloo.sh"]
         parentRefs:
-          - name: internal # external
+          - name: external
             namespace: kube-system
             sectionName: https
         rules:
