feat: introduce tuppr
- https://github.com/home-operations/tuppr
- https://kubesearch.dev/hr/ghcr.io-home-operations-charts-tuppr
- https://github.com/buroa/k8s-gitops/tree/main/kubernetes/apps/system-upgrade/tuppr

--- a/talos/patches/controller/machine-features.yaml
+++ b/talos/patches/controller/machine-features.yaml
@@ -4,4 +4,7 @@ machine:
     kubernetesTalosAPIAccess:
       enabled: true
       allowedRoles: ["os:admin"]
-      allowedKubernetesNamespaces: ["actions-runner-system", "kube-system"]
+      allowedKubernetesNamespaces:
+        - "actions-runner-system"
+        - "kube-system"
+        - "system-upgrade"
