config(talos): enable kubelet ImageVolume feature-gate

--- a/talos/patches/global/machine-kubelet.yaml
+++ b/talos/patches/global/machine-kubelet.yaml
@@ -1,6 +1,8 @@
 machine:
   kubelet:
     extraConfig:
+      featureGates:
+        ImageVolume: true
       serializeImagePulls: false
     extraMounts:
       - destination: /var/openebs/local
