--- a/kubernetes/apps/default/home-assistant/app/helm/values.yaml
+++ b/kubernetes/apps/default/home-assistant/app/helm/values.yaml
@@ -1,5 +1,5 @@
 ---
-# yaml-language-server: $schema=https://raw.githubusercontent.com/bjw-s-labs/helm-charts/common-4.0.1/charts/library/common/values.schema.json
+# yaml-language-server: $schema=https://raw.githubusercontent.com/bjw-s-labs/helm-charts/common-4.4.0/charts/library/common/values.schema.json
 controllers:
   home-assistant:
     annotations:
@@ -39,6 +39,9 @@ service:
         port: 8123
 route:
   app:
+    annotations:
+      gatus.home-operations.com/endpoint: |-
+        conditions: ["[STATUS] == 200"]
     hostnames:
       - "{{ .Release.Name }}.igloo.sh"
       - hass.igloo.sh
