--- a/kubernetes/apps/servarr/jellyseerr/app/helmrelease.yaml
+++ b/kubernetes/apps/servarr/jellyseerr/app/helmrelease.yaml
@@ -69,6 +69,9 @@ spec:
             port: *port
     route:
       app:
+        annotations:
+          gatus.home-operations.com/endpoint: |-
+            conditions: ["[STATUS] == 200"]
         hostnames:
           - "{{ .Release.Name }}.igloo.sh"
           - requests.igloo.sh
