--- a/kubernetes/apps/observability/gatus/app/prometheusrule.yaml
+++ b/kubernetes/apps/observability/gatus/app/prometheusrule.yaml
@@ -20,7 +20,7 @@ spec:
 
         - alert: GatusEndpointExposed
           expr: |
-            gatus_results_endpoint_success{group="guarded"} == 0
+            gatus_results_endpoint_success{group=~"guarded|internal"} == 0
           for: 5m
           annotations:
             summary: >-
